# ai_enviroment

./: .gitignore  Dockerfile  README.md  app.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  env.py  inference.py  models.py  tasks.py
