[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-ticket-triage"
version = "1.0.0"
authors = [
  { name="itsmadhavk18" },
]
description = "A real-world OpenEnv environment simulating customer support ticket triage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio",
    "openai",
    "pydantic",
    "openenv-core",
    "fastapi",
    "uvicorn",
]

[tool.setuptools]
packages = ["."]
